--- a/myQbox/styles/style.css
+++ b/myQbox/styles/style.css
@@ -47,6 +47,7 @@ h1 {
   position: relative;
   top: 0;
   left: 0;
+  
   background: #8F7A51;
  
 }
@@ -61,9 +62,9 @@ h1 {
   margin-top: 0.6rem;
   display: inline-block;
 }
-.topnav .login{
+.topnav .login_out{
   position:absolute;
-  right: 10px;
+  right: 15px;
   top: 1rem;
   display: inline-block;
 }
@@ -73,25 +74,24 @@ h1 {
 .search{
   position: absolute;
   right: 5.6rem;
-  top: 110px;
+  top: 85px;
   height: 40px; 
   padding: 15px;
   font: #8F7A51;
   background: #DBC392;
-  border-top-color: #003B71;
-  border-bottom-color: #003B71;
+  border: 2px solid#003B71;
   border-radius: 10px;
 }
 .content{
+  text-align: center;
   position: relative;
   margin-left:50px;
   margin-right:50px;
-  margin-top: 100px;
+  margin-top: 70px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   height:1000px;
   background-color:#FFEBC4;
-  text-align:center;
 }
 
 .vote1{
@@ -118,4 +118,105 @@ h1 {
   position: absolute;
   left: 1.25vw;
   top: 650px;
+}
+.lname{
+  position: absolute;
+  right: 22.5rem;
+  top: 60px;
+  height: 40px;
+  width: 13vw;
+  font-size: 20px;
+  background: #FFF4DF;
+  border: 2px solid#43618F;
+  border-radius: 10px;
+}
+.fname{
+  position: absolute;
+  right: 7.1rem;
+  top: 60px;
+  height: 40px; 
+  width: 13vw;
+  font-size: 20px;
+  background: #FFF4DF;
+  border: 2px solid#43618F;
+  border-radius: 10px;
+}
+.nickname{
+  position: absolute;
+  right: 14.5rem;
+  top: 110px;
+  height: 40px;
+  width: 20vw;
+  font-size: 20px;
+  background: #FFF4DF;
+  border: 2px solid#43618F;
+  border-radius: 10px;
+}
+.sex{
+  position: absolute;
+  right: 7.1rem;
+  top: 110px;
+  height: 40px;
+  width: 6vw;
+  font-size: 20px;
+  background: #FFF4DF;
+  border: 2px solid#43618F;
+  border-radius: 10px;
+}
+
+.mail{
+  position: absolute;
+  right: 7.1rem;
+  top: 160px;
+  height: 40px;
+  width: 26.5vw;
+  font-size: 20px;
+  background: #FFF4DF;
+  border: 2px solid#43618F;
+  border-radius: 10px;
+}
+.pw{
+  position: absolute;
+  right: 7.1rem;
+  top: 210px;
+  height: 40px;
+  width: 26.5vw;
+  font-size: 20px;
+  background: #FFF4DF;
+  border: 2px solid#43618F;
+  border-radius: 10px;
+}
+
+::placeholder{
+  color: #8F7A51;
+  font-size: 20px;
+}
+
+.Qboximg{
+  position: absolute;
+  left: 110px;
+  top: 40px;  
+}
+
+.Qboxdata{
+  position: absolute;
+  left: 100px;
+  top:300px;
+}
+
+.logbg{
+  position: absolute;
+  left: 12%;
+}
+
+.R_short_answer{
+  position: absolute;
+  left: 7%;
+  top: 5%;
+}
+
+.R_vote{
+  position: absolute;
+  left: 7%;
+  top: 5%;
 }
