--- a/myQbox/styles/style.css
+++ b/myQbox/styles/style.css
@@ -259,11 +259,11 @@ h1 {
 
 .response_box{
   position: absolute;
-  right: 7.1rem;
-  top: 450px;
-  height: 20%;
-  width: 1000px;
-  font-size: 30px;
+  right: 24.5rem;
+  top: 27%;
+  height: 15%;
+  width: 48vw;
+  font-size: 2.5rem;
   background: #FFF4DF;
   border: 4px solid#43618F;
   border-radius: 20px;
@@ -316,6 +316,7 @@ label {
 
 #sideMenu-active:checked + .sideMenu {
   transform: translateX(0);
+  display: inline-block;
 }
 
 #sideMenu-active {
@@ -328,7 +329,7 @@ label {
     left: -41.5%;
     top: -70px;
     width: 300px;
-    height: 125%;
+    height: 100%;
     background-color: #DBC392;
     /*border-right: 3px solid #d1d1d1;*/
     display: flex;
@@ -395,4 +396,40 @@ label {
     position: absolute;
     left: 1vw;
     top: 435.5px;
+  }
+
+  .sbox_out{
+    position: absolute;
+    width: 850px;
+    height: 350px;
+    top: 3%;
+    left: 13.5%;
+    background: #FFF5E1;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 75px;
+    display: inline-block;
+  }
+
+  .sbox{
+    position: absolute;
+    top: 15%;
+    left: 2%;
+    width: 800px;
+    height: 250px;
+    font-size: 3rem;
+    background: #FFF5E1;
+    border: 0px;
+    display: inline-block;
+  }
+
+  .vbox_out{
+    position: absolute;
+    width: 850px;
+    height: 400px;
+    top: 3%;
+    left: 13.5%;
+    background: #FFD278;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 75px;
+    display: inline-block;
   }
